--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,1 @@
-<nav>
-  <mat-toolbar>
-    <span>Team Foot</span>
-    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>Ajout joueur</button>
-      <button mat-menu-item>Liste joueurs</button>
-    </mat-menu>
-  </mat-toolbar>
-  <div class="img"></div>
-</nav>
-<div class="container" id="content">
-  <app-ajout-joueur></app-ajout-joueur>
-  <app-joueurs></app-joueurs>
-</div>
-
-<div id="footer">
-  <div id="footer-img"></div>
-</div>
+<app-formulaire></app-formulaire>
