--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css';
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-#content{
-    margin-top: 2rem;
-}
 
-#footer{
-    height: 300px;
-}
-#footer-img{
-    background-image: url("img/footer.jpg");
-    width: 100%;
-    height:100%;
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-position: bottom;
-}
-.mat-toolbar {
-    background:#000000b5;;
-    color:#d2c3c3;
-}
-#formJoueur{
-    border: 1px solid lightgray;
-    border-radius: 1rem;
-}
-#formJoueur .btn-secondary{
-    margin-bottom: 1rem;
-}
-#formJoueur h4{
-    margin-top: 1rem;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
