--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-formulaire></app-formulaire>
+<mat-toolbar>
+    <h2>Ajout joueur de foot</h2>
+</mat-toolbar>
+
+<div class="container">
+    <app-formulaire></app-formulaire>
+</div>
